--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,32 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipdb = "0.13.9"
-flask = "*"
-flask-sqlalchemy = "3.0.3"
-Werkzeug = "2.2.2"
-flask-migrate = "*"
-sqlalchemy-serializer = "*"
-flask-restful = "*"
-flask-cors = "*"
-faker = "*"
+alembic = "==1.13.2"
+bcrypt = "==4.2.0"
+blinker = "==1.8.2"
+cachelib = "==0.9.0"
+click = "==8.1.7"
+flask = "==3.0.3"
+flask-bcrypt = "==1.0.1"
+flask-caching = "==2.3.0"
+flask-cors = "==4.0.1"
+flask-jwt-extended = "*"
+flask-migrate = "==4.0.7"
+flask-redis = "==0.4.0"
+flask-sqlalchemy = "==3.1.1"
+greenlet = "==3.0.3"
+itsdangerous = "==2.2.0"
+jinja2 = "==3.1.4"
+mako = "==1.3.5"
+markupsafe = "==2.1.5"
+pyjwt = "==2.9.0"
+python-dotenv = "==1.0.1"
+redis = "==5.0.8"
+sqlalchemy = "==2.0.31"
+typing-extensions = "==4.12.2"
+werkzeug = "==3.0.3"
+
+[dev-packages]
 
 [requires]
-python_full_version = "3.8.13"
+python_version = "*"
