--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5555",
-  "engines": {"node": ">=18"},
+  "engines": {
+    "node": "16"
+  },
   "engineStrict": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +18,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {"@babel/plugin-proposal-private-property-in-object":"^7.21.11"},
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
