--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,17 @@ Flask-Migrate==4.0.7
 flask-redis==0.4.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
+honcho==1.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+packaging==24.1
 PyJWT==2.9.0
 python-dotenv==1.0.1
 redis==5.0.8
+setuptools==72.1.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
 Werkzeug==3.0.3
