--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,28 @@
   "private": true,
   "proxy": "http://localhost:5555",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
+    "axios": "^1.7.3",
+    "dom": "^0.0.3",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.26.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {"@babel/plugin-proposal-private-property-in-object":"^7.21.11"},
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
